# D24Pi-Hadronic-Parameters

./: CMakeLists.txt  Makefile  README.md
examples/: Binning.cpp  CMakeLists.txt  FlippedBinning.cpp  GenerateFlat.cpp  KKPiPiBinning.cpp  KKPiPiFlat.cpp  MinimalExample.cpp  Parameters.cpp
include/: Amplitude.h  Event.h  Generator.h  PiPiPiPiMath.h  Utilities.h
src/: Amplitude.cpp  CMakeLists.txt  Event.cpp  Generator.cpp  PiPiPiPiMath.cpp  Utilities.cpp
